--- a/3rdparty/indi-mi/README
+++ b/3rdparty/indi-mi/README
@@ -6,28 +6,28 @@ This package provides Moravian Instruments CCD INDI driver for MI CCD cameras.
 Requirements
 ============
 
-+ INDI >= v1.2.0 (http://indi.sf.net)
++ INDI >= v1.2.0 (http://www.indilib.org/)
 
 	You need to install both indi and indi-devel to build this package.
-	
+
 + cfitsio
 
 	cfitsio-devel is required to compile support for FITS.
-	
+
 + libusb-1
 
 	libusb-1 is required.
-	
+
 Installation
 ============
 
 	See INSTALL
-	
+
 How to Use
 ==========
 
 	You can use the MI INDI Driver in any INDI-compatible client such as KStars or Xephem.
-	
+
 	To run the driver from the command line:
 
 	USB variant:
