--- a/debian/libsbig/changelog
+++ b/debian/libsbig/changelog
@@ -1,3 +1,9 @@
+libsbig (2.1.1) xenial; urgency=low
+
+  * Library name updated.
+
+ -- Jasem Mutlaq <mutlaqja@ikarustech.com>  Sat, 11 Jun 2016 19:00:00 +0300
+
 sbig (2.1.0) vivid; urgency=low
 
   * New upstream release
