--- a/debian/indi-asi/changelog
+++ b/debian/indi-asi/changelog
@@ -1,3 +1,9 @@
+indi-asi (0.5) vivid; urgency=low
+
+  * Updated SDK. Name changed to indi-asi
+
+ -- Jasem Mutlaq <mutlaqja@ikarustech.com>  Sun, 12 Jun 2016 13:00:00 +0300
+ 
 indi-asicam (0.4) vivid; urgency=low
 
   * Fix west/east guide issues.
