--- a/debian/indi-gpsd/changelog
+++ b/debian/indi-gpsd/changelog
@@ -1,8 +1,14 @@
-indi-gpsd (0.2) UNRELEASED; urgency=medium
+indi-gpsd (0.3) UNRELEASED; urgency=medium
+
+  * Improve fix detection. Use 2D fixes with zero altitude.
+
+ -- Paweł T. Jochym <jochym@wolf.ifj.edu.pl>  Mon, 29 Aug 2016 20:56:42 +0200
+
+indi-gpsd (0.2) stable; urgency=medium
 
   * Merge of astroberry gps driver
 
- -- Paweł T. Jochym <jochym@wolf.ifj.edu.pl>  Tue, 31 May 2016 00:40:38 +0200
+ -- Paweł T. Jochym <jochym@wolf.ifj.edu.pl>  Mon, 29 Aug 2016 20:56:11 +0200
 
 indi-gpsd (0.1) stable; urgency=low
 
