--- a/debian/kstars/changelog
+++ b/debian/kstars/changelog
@@ -1,3 +1,9 @@
+kstars-bleeding (5:16.10) yakkety; urgency=medium
+
+  * 16.10 Rolling Release. Version 2.6.1
+
+ -- Jasem Mutlaq <mutlaqja@ikarustech.com>  Sun, 02 OCT 2016 14:00:00 +0300
+
 kstars-bleeding (5:16.04) xenial; urgency=medium
 
   * 16.04 Rolling Release. Version 2.6.0
