--- a/debian/libindi/changelog
+++ b/debian/libindi/changelog
@@ -1,3 +1,9 @@
+libindi (1.3.1) xenial; urgency=medium
+
+  * New upstream release.
+
+ -- Jasem Mutlaq <mutlaqja@ikarustech.com>  Tue, 15 Nov 2016 09:30:00 +0300
+
 libindi (1.3.0) UNRELEASED; urgency=medium
 
   * New upstream release.
