--- a/debian/indi-nexstarevo/changelog
+++ b/debian/indi-nexstarevo/changelog
@@ -7,8 +7,9 @@ indi-nexstarevo (0.3.0) UNRELEASED; urgency=medium
   * Dropped dynamical memory allocations in the driver 
   * Improved stability (still a bit problematic though)
   * Improved and simplified command processing logic
-  * Some code clean up
-  * Limit approach distance for AZ in high Alt
+  * Some code clean up and refactoring
+  * Constant approach distance on encoders
+  * Periodically update target position on long goto
 
  -- Paweł T. Jochym <jochym@wolf.ifj.edu.pl>  Wed, 08 Feb 2017 08:35:48 +0100
 
