--- a/debian/libindi/changelog
+++ b/debian/libindi/changelog
@@ -1,3 +1,9 @@
+libindi (1.4.0) zesty; urgency=medium
+
+  * New upstream release.
+
+ -- Jasem Mutlaq <mutlaqja@ikarustech.com>  Sun, 26 Feb 2017 14:30:00 +0300
+ 
 libindi (1.3.1) xenial; urgency=medium
 
   * New upstream release.
