KStars and libindi-all Debian updates

--- a/debian/kstars/changelog
+++ b/debian/kstars/changelog
@@ -1,3 +1,9 @@
+kstars-bleeding (5:17.04) zesty; urgency=medium
+
+  * 17.04 Rolling Release. Version 2.7.5
+
+ -- Jasem Mutlaq <mutlaqja@ikarustech.com>  Sun, 26 Feb 2017 14:30:00 +0300
+
 kstars-bleeding (5:16.12) yakkety; urgency=medium
 
   * 16.12 Rolling Release. Version 2.7.2
