--- a/debian/fxload-libusb/changelog
+++ b/debian/fxload-libusb/changelog
@@ -1,3 +1,9 @@
+fxload-libusb (1.0.1) xenial; urgency=medium
+
+  * Fix package version.
+
+ -- Marco Gulino <marco.gulino@gmail.com>  Tue, 27 Jun 2017 18:03:00 +0100
+
 fxload-libusb (1.0.0-1) xenial; urgency=medium
 
   * Initial release.
