--- a/debian/libqhy/changelog
+++ b/debian/libqhy/changelog
@@ -1,3 +1,9 @@
+libqhy (0.1.9) xenial; urgency=medium
+
+  * Upstream release.
+
+ -- Jasem Mutlaq <mutlaqja@ikarustech.com>  Mon, 03 Jul 2017 20:00:00 +0300
+
 libqhy (0.1.8) xenial; urgency=medium
 
   * Upstream release.
