--- a/3rdparty/libqsi/README
+++ b/3rdparty/libqsi/README
@@ -1,66 +1,141 @@
 Quantum Scientific Imaging, Inc.
+
 QSI Linux API README
 
 The QSI Linux API is supplied in source code form and is built and installed using the standard GNU auto tools.
 
 The QSI API supports two driver libraries for the USB connection to the the camera via an FTDI USB interface.  You may use either
 libftdi (an open source release), or libftd2xx from FTDI (a binary release - www.ftdi-chip.com) for that connection.  
-The choice is mutually exclusive; You cannot confgure both libraries simutaneaously.  
-During the build proces, use the configure command to select the ftdi library of your choice.
+The choice is mutually exclusive; You cannot configure both libraries simultaneously. 
+
+Libftdi is included as a package in most modern distributions of Linux.  You can use the appropriate package manager 
+(rpm/dnf/app-get) to install libftdi and libftdi-devel, rather than doing a manual build/install.
+ 
+During the QSI api build process, use the configure command to select the ftdi library of your choice.
 
 To use libftd2xx, use the --enable-libftd2xx option on the ./configure command:
 
-./configure --enable-libftd2xx
+./configure --with-ftd=ftd2xx
 
-To use libgftdi, use the --enable-libftdi option:
+To use libftdi-1.x, use the --with-ftd=ftdi1 option:
 
-./configure --enable-libftdi
+./configure --with-ftd=ftdi1
 
-The ./configure defaults to libftdi if no option is specified.
+To use the legacy libfdi-0.2 use the --with-ftd=ftdi option.  This is deprecated and not recommended.
+
+The ./configure defaults to libftd2xx if no option is specified.
 
 See the QSI Linux API Reference Manual for more information.
 
-Install libftd2xx or libftdi and their dependencies before building and installing the QSI API.
+Install libftd2xx or libftdi and their dependencies before building and installing the QSI api.
+
+*******************************************************************************************************
+
+As of release 7.4, QSI cameras using the Cypress FX3 USB 3.0 chipset are now supported.
+
+NOTE: All 500 and 600 series cameras do not require this driver stack.  It is recommended
+that you exclude this driver (by not specifying --enable--cyusb).  The Cypress driver is for
+experimental purposes only.
+
+If you do wish to include the Cypress device support, add the --enable-cyusb 
+to the configure command line.
+
+For example: ./configure --enable-cyusb
+
+Proceed with the instructions below to add the require supporting libraries:
+
+This change requires that the Cypress libcyusb library, udev development files,
+and the libusb-1.0 libraries be installed prior to building the QSI API release.
+
+libusb-1.0 can be found at: http://www.libusb.com.
+
+Follow the instructions provided with the download to build and install the release.
+
+You must also install the development package for libudev.
+  
+On Fedora before release 18, the package name is "libudev-devel".
+On Fedora 18 and beyond, the package name is systemd-devel.
+On Ubuntu, the package name is "libudev-dev".
+
+This package installs the libudev.h header file required by libcyusb.
+
+For example:
+dnf install libudev-devel
+
+The Cypress libcyusb release can be found at: http://www.cypress.com/?docID=42387&dlm=1
+
+Download and install fx3_sdk_v1.3.1_linux.tar.gz from the link above.  
+The Cypress download site will require that you create a login for their web site 
+to allow the download.  Registration is free of charge.
+
+Unzip the downloaded file:
+
+tar -xvf fx3_sdk_V1.3.1_linux.tar.gz
+
+run make in the top directory to build the library:
+
+make
+
+run make in the src directory:
+
+cd src
+make
+cd ..
+
+Run the install.sh script in the top directory to install the library. 
+You must have root permissions in install the library.
+
+sudo ./install.sh
+
+Copy the cyusb.h header file to the /usr/local/include directory:
+
+cp cyusb.h /usr/local/include
+
+Update the shared library cache:
+
+sudo ldconfig -n /usr/local/lib
+
+The installation of the Cypress FX3 library is now complete. You can now proceed
+with the QSI API Installation.
 
 ********************************************************************************************************
 
-Installation
+QSI API Installation
 
 Insure that the kernel is configured for USB support and the device permissions are correct. 
 
 With root permissions:
 
 --------------------------------------------------------------
-If you have selected libftdi:
+If you have selected libftdi (--with-ftd=ftdi1):
 
-Download, compile, and install libftdi-0.19
-Insure that libubs-0.1 is installed, as required by libftdi.
+Use your package manager to install libftdi (this will install the latest libftdi-1.x version).
+
 --------------------------------------------------------------
 
 -----------------------------------------------------------------------------------------------------------
-If you have selected libftd2xx:
+If you have selected libftd2xx (--with-ftd=ftd2xx):
 
-Download, compile, and install libftd2xx. (Available at: http://www.ftdichip.com/Drivers/D2XX.htm )
+Download and install libftd2xx. (Available at: http://www.ftdichip.com/Drivers/D2XX.htm )
   
-Compile and install it as directed by the README from the libftd2xx release.  For more information see the
-installation section of the QSI Linux API reference manual located in the doc directory of the release.
+Install it as directed by the README from the libftd2xx release.  
 
-Insure that libusb-1.0 is installed, as required by libftd2xx.
+Insure that libusb or libusbx (or later) is installed, as required by libftd2xx. See the libftd2xx README.
 ------------------------------------------------------------------------------------------------------------
 
-Extract the release files from the qsiapi tar archive.
+Extract the release files from the qsiapi tar archive (y and y below represent the specific release version).
 	
-	tar -xvf qsiapi.6.2.0.0.tar.gz
+	tar -xvf qsiapi.x.y.0.0.tar.gz
 	
 Run configure:
 	
-	In the extracted qsiapi.6.2.0.0 directory
+	In the extracted qsiapi.x.y.0.0 directory
 	
-	./configure --enable-libftdi
+	./configure --with-ftd=ftdi1
 	
 	 ---or based on your library selection---
 	 
-	./configure --enable-libftd2xx
+	./configure --with-ftd=ftd2xx
 	
 	make all
 	make install
@@ -74,17 +149,15 @@ Run ldconfig for the newly installed libraries:
 	cd /usr/local/lib
 	ldconfig /usr/local/lib
 
-Insure that the device permissions are correct.  Update udev or add the following 
-line to /etc/fstab (if it does not already exist):
+Insure that the USB device permissions are correct.  Update udev as appropriate.
+Check the permission /dev/bus/USB/xxx/yyy, where xxx is the hub number and yy is the device number.
+With the camera plugged in, you can use lsusb to find the device address.
 
-	none /proc/bus/usb usbfs defaults,devmode=0666 0 0
+Users of the QSI API must have read/write permissions to the QSI camera USB device.
 
-And remount all in the fstab file
-	mount -a
-	
 Connect the QSI camera to AC power and connect the USB cable from the camera to an available 
-USB port on the computer. Use usbview (available at http://www.kroah.com/linux-usb/) or lsusb 
-to verify proper USB installation.
+USB port on the computer. Use lsusb to verify proper USB installation and that the permissions
+are properly set.
 
 Confirm that all libraries are loaded and the system is properly configured.
 
@@ -111,24 +184,21 @@ Some problems may be related to the ftdi_sio driver loading. You must unload thi
 Insure that the user running the api has read/write access to the camera usb raw device. Check the permissions
  in /dev/bus/usb/XXX/YYY, where XXX is a hub number and YYY is the device number obtained from lsusb.
 
-To set device persmissions other than root:
+To set device permissions other than root:
 
 udev changes:
 
-For example, to give rw access rights to all users for all QSI USB cameras in Fedora:
+For example, to give rw access rights to all users for all QSI USB cameras in Fedora 24:
 
-In the file /etc/udev/rules.d/50-udev-rules,
+Create a file in /etc/udev/rules.d called 99-qsi.rules with the following contents:
 
-after:
-"Persistent block device stuff - end"
-and before:
-ACTION="add", SUBSYSTEM='usb-device'...
+KERNEL=="*", SUBSYSTEM=="usb", ATTR{idVendor}=="0403", ATTR{idProduct}=="eb48", MODE="0666"
+KERNEL=="*", SUBSYSTEM=="usb", ATTR{idVendor}=="0403", ATTR{idProduct}=="eb49", MODE="0666"
 
-Add the following lines:
-ACTION="add", SUBSYSTEM=usb-device', \
-SYSFS{idVendor}=="0403", SYSFS{idProduct}=="eb48", \
-PROGRAM="/bin/sh -c 'K=%k; K=$${K#usbdev}; printf bus/usb/%%03i/%%03i $${K%%%%.*} $${K#*.}' ", \
-NAME="%c", MODE="0666"
+After saving the file, execute the following:
+sudo udevadm control --reload-rules
+sudo udevadm trigger
+
 
 In Ubuntu 6:
 
@@ -138,7 +208,8 @@ after:
 #USB devices (usbfs replacement)
 SUBSYSTEM=usb_device, MODE=0664
 
-Add the following line:
+Add the following lines:
 SUBSYSTEM=usb_device, SYSFS{idVendor}==0403, SYSFS{idProduct}== eb48, MODE=0666
 
+SUBSYSTEM=usb_device, SYSFS{idVendor}==0403, SYSFS{idProduct}== eb49, MODE=0666
 
