--- a/debian/indi-qsi/changelog
+++ b/debian/indi-qsi/changelog
@@ -1,3 +1,9 @@
+indi-qsi (0.6.0) xenial; urgency=low
+
+  * New upstream version.
+
+ -- Jasem Mutlaq <mutlaqja@ikarustech.com>  Mon, 7 Jul 2017 15:30:00 +0300
+
 indi-qsi (0.5.0) xenial; urgency=low
 
   * New upstream version.
