--- a/debian/libindi/changelog
+++ b/debian/libindi/changelog
@@ -1,3 +1,9 @@
+libindi (1.5.0) xenial; urgency=medium
+
+  * New upstream release.
+
+ -- Jasem Mutlaq <mutlaqja@ikarustech.com>  Mon, 31 Jul 2017 14:30:00 +0300
+
 libindi (1.4.1) zesty; urgency=medium
 
   * New upstream release.
