Updates meteoconfig.py and start / stop scripts, to allow for more indiserver options (1. local, 2. remote, 3. tunnel with remote startup and 4. tunnel), and more general config.

--- a/3rdparty/indi-duino/add-on/meteostationWEB/README
+++ b/3rdparty/indi-duino/add-on/meteostationWEB/README
@@ -1,7 +1,4 @@
 ==== MeteoStations graphs python daemons. ====
-Install pyrrdtool and python
-Edit and customice startMETEO.sh script to macht your setup.
-Test it and put on rc.local if you want a automatic startup.
-
-
-
+Install python, python-rrdtool and python-simplejson
+Edit and customice meteoconfig.py script to macht your setup.
+Test startupMETEO.sh and put on rc.local if you want a automatic startup.
