--- a/3rdparty/indi-qhy/README
+++ b/3rdparty/indi-qhy/README
@@ -1,16 +1,12 @@
 QHY CCD Driver
 ==================
 
-This package provides QHY CCD INDI driver for QHY CCD & CMOS cameras.
-
-Support list:
-QHY5,QHY5II,QHY5LII,QHY5PII,QHY6,QHY8L,QHY9S,QHY10,QHY11,QHY12,QHY21,QHY22,QHY23
-
+This package provides QHY CCD/CMOS and Filter Wheels INDI driver.
 
 Requirtments
 ============
 
-+ INDI >= v0.9.9 (http://indi.sf.net)
++ INDI >= v1.5.0 (http://www.indilib.org)
 
 	You need to install both indi and indi-devel to build this package.
 	
@@ -42,4 +38,10 @@ How to Use
 	You can then connect to the driver from any client, the default port is 7624.
 	If you're using KStars, the driver will be automatically listed in KStars' Device Manager,
 	no further configuration is necessary.
+
+        If you cannot connect to the INDI driver from any INDI compliant application, run the QHY CCD test:
+
+        $ qhy_ccd_test
+
+        Share the test result output in INDI & QHY forums. Be as thorough as possible with your environment conditions (OS, architecture..etc)
 	 
