--- a/debian/indi-qhy/changelog
+++ b/debian/indi-qhy/changelog
@@ -1,3 +1,9 @@
+indi-qhy (1.7) xenial; urgency=medium
+
+  * New release
+
+ -- Jasem Mutlaq <mutlaqja@ikarustech.com>  Thu, 24 Aug 2017 23:54:00 +0300
+
 indi-qhy (1.6) xenial; urgency=medium
 
   * New release
