--- a/debian/kstars/changelog
+++ b/debian/kstars/changelog
@@ -1,3 +1,9 @@
+kstars-bleeding (5:17.08) zesty; urgency=medium
+
+  * 17.08 Rolling Release. Version 2.8.2
+
+ -- Jasem Mutlaq <mutlaqja@ikarustech.com>  Sun, 27 Aug 2017 00:30:00 +0300
+ 
 kstars-bleeding (5:17.04) zesty; urgency=medium
 
   * 17.04 Rolling Release. Version 2.7.5
