--- a/debian/libindi/changelog
+++ b/debian/libindi/changelog
@@ -1,3 +1,9 @@
+libindi (1.6.0) xenial; urgency=medium
+
+  * Upstream release.
+
+ -- Jasem Mutlaq <mutlaqja@ikarustech.com>  Tue, 7 Nov 2017 14:30:00 +0300
+
 libindi (1.5.0) xenial; urgency=medium
 
   * New upstream release.
