--- a/debian/gsc/changelog
+++ b/debian/gsc/changelog
@@ -1,3 +1,9 @@
+gsc (1.3) bionic; urgency=low
+
+  * Moved to Git.
+
+ -- Jasem Mutlaq <mutlaqja@ikarustech.com>  Thu, 10 Nov 2010 00:16:00 +0300
+
 gsc (1.1) vivid; urgency=low
 
   * Release for launchpad
