--- a/debian/indi-dsi/changelog
+++ b/debian/indi-dsi/changelog
@@ -1,3 +1,9 @@
+indi-dsi (0.2) bionic; urgency=medium
+
+  * Upstream update
+
+ -- Jasem Mutlaq <mutlaqja@ikarustech.com>  Tue, 14 Nov 2017 13:00:00 +0300
+
 indi-dsi (0.1) trusty; urgency=low
 
   * New upstream release.
