--- a/debian/indi-qsi/changelog
+++ b/debian/indi-qsi/changelog
@@ -1,3 +1,9 @@
+indi-qsi (0.7.0) bionic; urgency=low
+
+  * New upstream version.
+
+ -- Jasem Mutlaq <mutlaqja@ikarustech.com>  Wed, 15 Nov 2017 16:30:00 +0300
+
 indi-qsi (0.6.0) xenial; urgency=low
 
   * New upstream version.
