--- a/debian/indi-gpsnmea/changelog
+++ b/debian/indi-gpsnmea/changelog
@@ -1,3 +1,9 @@
+indi-gpsnmea (0.2) bionic; urgency=medium
+
+  * Upstream release.
+
+ -- Jasem Mutlaq <mutlaqja@ikarustech.com>  Fri, 17 Nov 2017 13:30:00 +0300
+
 indi-gpsnmea (0.1) stable; urgency=medium
 
   * Initial Release.
