--- a/debian/indi-asi/changelog
+++ b/debian/indi-asi/changelog
@@ -1,3 +1,9 @@
+indi-asi (0.7) bionic; urgency=low
+
+  * Updated SDK.
+
+ -- Jasem Mutlaq <mutlaqja@ikarustech.com>  Tue, 21 Nov 2017 23:00:00 +0300
+
 indi-asi (0.6) xenial; urgency=low
 
   * Updated SDK.
