--- a/debian/libinovasdk/changelog
+++ b/debian/libinovasdk/changelog
@@ -1,3 +1,9 @@
+libinovasdk (1.3.2) bionic; urgency=low
+
+  * Updated Release.
+
+ -- Jasem Mutlaq <mutlaqja@ikarustech.com>  Wed, 22 Nov 2017 10:00:00 +0300
+
 libinovasdk (1.3.1) xenial; urgency=low
 
   * Initial Release.
